--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 <body>
 
+	<!-- hero -->
 	<section class="hero">
 		<div id="particles-js"></div>
 		<div class="hero-content">
@@ -43,6 +44,7 @@
 		</div>
 	</section>
 
+	<!-- about me -->
 	<section class="about">
 		<div class="container">
 			<div class="row">
@@ -121,6 +123,7 @@
 		</div>
 	</section>
 
+	<!-- work -->
 	<section class="work">
 		<div class="container">
 			<h2 class="hideme">Amazing Works</h2>
@@ -187,6 +190,7 @@
 		</div>
 	</section>
 
+	<!-- call to action -->
 	<section class="cta">
 		<div class="container">
 			<div class="col-xs-12 col-lg-9 hideme">
@@ -198,6 +202,7 @@
 		</div>
 	</section>
 
+	<!-- skill -->
 	<section class="skill">
 		<div class="container">
 			<div class="col-lg-6">
@@ -297,6 +302,7 @@
 		</div>
 	</section>
 
+	<!-- testimonials -->
 	<section class="testimonials">
 		<div class="container">
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -329,8 +335,57 @@
 		</div>
 	</section>
 
+	<!-- contact  -->
+	<section class="contact">
+		<div class="container">
+			<div class="col-lg-6 form">
+				<h4>DISCUSS ABOUT YOUR PROJECT ?</h4>
+				<form action="" method="">
+					<input type="text" name="" class="input-textbox" placeholder="Your Name Here">
+					<input type="email" name="" class="input-textbox" placeholder="Your Email Here">
+					<textarea class="input-textbox" placeholder="Your Message Here" rows="7"></textarea>
+					<button class="btn-submit" type="submit">SEND IT NOW!</button>
+				</form>
+			</div>
+			<div class="col-lg-6">
+				<h4>NICE TO HEAR FROM YOU</h4>
+				<p class="contact-greeting">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua.</p>
+				<h4>CONTACT INFORMATION</h4>
+				<div class="detail">
+					<h6>ADDRESS</h6>
+					<p class="address">Edward Andrew Neary, </p>
+					<p class="address">1807 Glenwood St NE, Palm Bay FL 32907</p>
+					<p class="address">United States</p>
+					<h6>EMAIL</h6>
+					<p class="inline email">youremailhere@gmail.com</p>
+					<p class="inline email">youremailhere@gmail.com</p>
+					<h6>PHONE</h6>
+					<p class="inline">+1 983 9200398</p>
+					<p class="inline">+62 983 377808</p>
+				</div>
+				
+			</div>
+		</div>
+	</section>
 
-	<!-- import js file -->
+	<!-- footer -->
+	<footer>
+		<div class="container">
+			<div class="social">
+				<ul>
+					<li><a href=""><img src="img/fb.png" class="social-icon"></a></li>
+					<li><a href=""><img src="img/twitter.png" class="social-icon"></a></li>
+					<li><a href=""><img src="img/instagram.png" class="social-icon"></a></li>
+					<li><a href=""><img src="img/dribbble.png" class="social-icon"></a></li>
+					<li><a href=""><img src="img/linkedin.png" class="social-icon"></a></li>
+				</ul>
+			</div>
+			<p>© 2017 RichsCannell. All Rights Reserved</p>
+		</div>
+	</footer>
+
+	<!-- javascript -->
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.visible.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
