--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 					<li><a href=""><img src="img/linkedin.png" class="social-icon"></a></li>
 				</ul>
 			</div>
-			<p>© 2017 RichsCannell. All Rights Reserved</p>
+			<p>© 2017 RichScannell. All Rights Reserved</p>
 		</div>
 	</footer>
 
