--- a/index.html
+++ b/index.html
@@ -36,16 +36,24 @@
 		<div id="particles-js"></div>
 		<div class="hero-content">
 			<div class="container">
-				<h5>Let's be</h5>
-				<h1>Awesome <span>with</span> RichScannell </h1>
-				<p>i always make the best things in software development and website development.</p>
-				<a>GET STARTED</a>
+				<h5>Let’s build something</h5>
+				<h1>Great <span>with</span> RichScannell </h1>
+				<p>a Professional software developer and website developer that
+				always create something incredible.
+				</p>
+				<a>DOWNLOAD RESUME</a>
 			</div>	
+		</div>
+		<div class="arrow">
+			<div class="btn-container">
+				<p>scroll to explore</p>
+				<a href="#about" class="scrollto"><img src="img/download.png"></a>
+			</div>			
 		</div>
 	</section>
 
 	<!-- about me -->
-	<section class="about">
+	<section class="about" id="about">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 about-me">
