--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="arrow">
 			<div class="btn-container">
 				<p>scroll to explore</p>
-				<a href="#about" class="scrollto"><img src="img/download.png"></a>
+				<a href="" class="scrollto"><img src="img/download.png"></a>
 			</div>			
 		</div>
 	</section>
