--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>
 		Richscannell - Professional Software Developer
 	</title>
-
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
