--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="howitworks.html">Find a Ride</a></li>                
+                        <li><a href="howitworks.html">Offer a Ride</a></li>                
                         <li><a href="howitworks.html">How it works</a></li>                
                         <li><a href="faq.html" class="active">Faq</a></li>                
                         <li><a href="contact.html">Contact us</a></li>                
@@ -53,13 +55,24 @@
         </nav>
     </header>
 
-    <section class="how-it-works homepage-hero">
+    <!-- <section class="how-it-works homepage-hero">
         <header>           
             <div class="container">
                 <h1>It's a simple, quick, cheap and fun way to commute together.</h1>
                 <p>Afrikgo connecting people who need to travel with drivers who have empty seats. Trusted carpooling, fully insured.</p>
             </div>
         </header>
+    </section> -->
+
+    <section class="how-it-works homepage-hero">
+        <div class="header">
+            <div class="container">
+              <div class="bg">
+                <h1>It's a simple, quick, cheap and fun way to commute together.</h1>
+                <p>Afrikgo connecting people who need to travel with drivers who have empty seats. Trusted carpooling, fully insured.</p>
+              </div>
+            </div>
+        </div>
     </section>
 
     <section class="find-form">
@@ -251,6 +264,29 @@
         </div>
     </section>
 
+
+    <section class="user">
+        <div class="passenger">
+            <div class="user-box">
+                <div><img src="images/user.png"></div>
+                <div>
+                    <p class="user-title">I'm a passenger</p>
+                    <p class="user-text">find a ride</p>                    
+                </div>                    
+                <span><img src="images/IconArrowblue.png"></span>
+            </div>
+        </div>
+        <div class="driver">
+            <div class="user-box">
+                <div><img src="images/driver.png"></div>
+                <div>
+                    <p class="user-title">I'm a driver</p>  
+                    <p class="user-text">offer a ride</p>              
+                </div>
+                <span><img src="images/IconArrowyellow.png"></span>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="footer">
