--- a/howitworks.html
+++ b/howitworks.html
@@ -26,7 +26,7 @@
   <body>
 
     <header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
