--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
 <body>
 
 	<header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -53,17 +53,15 @@
         </nav>
     </header>
 
-
-	<section class="hero-about">
-		<div class="hero-image">
-			<img src="images/hero1.jpg">
-		</div>
-		<div class="hero-text">
-			<div class="container">
-				<h1>Afrikgo is changing the way goods move through cities.</h1>
-			</div>			
-		</div>
-	</section>
+    <section class="how-it-works homepage-hero">
+        <div class="header">
+            <div class="container">
+              <div class="bg">
+                <h1>Afrikgo is changing the way goods move through cities.</h1>
+              </div>
+            </div>
+        </div>
+    </section>
 
 	<section class="our-vision">
 		<div class="container">
@@ -104,7 +102,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
