--- a/cookies-policy.html
+++ b/cookies-policy.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -69,57 +69,6 @@
       </div>
     </div>
 
-    <footer>
-        <div class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-3 col-md-3">
-                        <h4>using afrikgo</h4>
-                        <ul class="footer-nav">
-                            <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
-                            <li><a href="">Experience Levels</a></li>
-                            <li><a href="ratings.html">Ratings</a></li>
-                            <li><a href="ladies-only.html">Ladies only</a></li>
-                            <li><a href="member-agreement.html">Member Agreement</a></li>
-                            <li><a href="insurance.html">Insurance</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-xs-12 col-sm-3 col-md-3">
-                        <h4>our company</h4>
-                        <ul class="footer-nav our-company">
-                            <li><a href="about-us.html">About us</a></li>
-                            <li><a href="#">Afrikgo Life</a></li>
-                            <li><a href="#">Press</a></li>
-                            <li><a href="#">Partners</a></li>
-                            <li><a href="#">We're hiring</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-xs-12 col-sm-3 col-md-3">
-                        <h4>legal</h4>
-                        <ul class="footer-nav">
-                            <li><a href="terms&condition.html">Terms & Condition</a></li>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="cookies-policy.html">Cookies Policy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-xs-12 col-sm-3 col-md-3">
-                        <h4>get our mobile app</h4>
-                        <a href="#" class="link-app"><img src="images/appstore.png" ></a>
-                        <a href="#" class="link-app"><img src="images/playstore.png" ></a>
-                        <ul class="social-media">
-                            <li><a href=""><img src="images/facebook.png"></a></li>
-                            <li><a href=""><img src="images/twitter.png"></a></li>
-                            <li><a href=""><img src="images/instagram.png"></a></li>
-                            <li><a href=""><img src="images/youtube.png"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <p class="copyright">Copyright © 2017 Afrikgo.com. All right reserved.</p>
-            </div>
-        </div>
-    </footer>
 
     <footer>
         <div class="footer">
@@ -129,7 +78,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
