--- a/fonts/preview.html
+++ b/fonts/preview.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <title>
-Rubik-Light
+Rubik-Regular
  - Web font preview
 </title>
 <style type='text/css'>
 
 @font-face {
-  font-family: 'Rubik-Light';
-  src: url('Rubik-Light.eot?#iefix') format('embedded-opentype'),  url('Rubik-Light.woff') format('woff'), url('Rubik-Light.ttf')  format('truetype'), url('Rubik-Light.svg#Rubik-Light') format('svg');
+  font-family: 'Rubik-Regular';
+  src: url('Rubik-Regular.eot?#iefix') format('embedded-opentype'),  url('Rubik-Regular.woff') format('woff'), url('Rubik-Regular.ttf')  format('truetype'), url('Rubik-Regular.svg#Rubik-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-body { font-family: 'Rubik-Light' !important; }
+body { font-family: 'Rubik-Regular' !important; }
 h1, h2, h3, h4 { font-weight: normal; }
 .reg { color:black; background:white; }
 .inverse { color:white; background:black; }
@@ -51,8 +51,8 @@ definitions. Like this:
 </div>
 <div>
 <code style='font-size:11px;'>@font-face {
-  font-family: 'Rubik-Light';
-  src: url('/css/webfont/Rubik-Light.eot?#iefix') format('embedded-opentype'),  url('/css/webfont/Rubik-Light.woff') format('woff'), url('/css/webfont/Rubik-Light.ttf')  format('truetype'), url('/css/webfont/Rubik-Light.svg#Rubik-Light') format('svg');
+  font-family: 'Rubik-Regular';
+  src: url('/css/webfont/Rubik-Regular.eot?#iefix') format('embedded-opentype'),  url('/css/webfont/Rubik-Regular.woff') format('woff'), url('/css/webfont/Rubik-Regular.ttf')  format('truetype'), url('/css/webfont/Rubik-Regular.svg#Rubik-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }</code>
@@ -61,7 +61,7 @@ definitions. Like this:
 <div class='reg'>
 <h1>
 H1
-Rubik-Light
+Rubik-Regular
 </h1>
 <h2>
 H2
@@ -96,7 +96,7 @@ Curabitur auctor orci vel felis sodales porttitor. Aenean non neque auctor tellu
 <div class='inverse'>
 <h1>
 H1
-Rubik-Light
+Rubik-Regular
 </h1>
 <h2>
 H2
