--- a/howitworks.html
+++ b/howitworks.html
@@ -7,7 +7,7 @@
   <meta content="empty" name="description">
   <meta content="empty" name="author">
 
-  <title>About Us | Afrikgo</title>
+  <title>How it Works | Afrikgo</title>
 
   <!-- Stylesheets -->
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -54,14 +54,16 @@
     </header>
 
     <section class="how-it-works">
-      <header>     
-      
+      <div class="header">
         <div class="container">
-          <h1>How Afrikgo Works?</h1>
-          <p>Explore how we connect the driver with passenger.</p>
-          <button type="button" class="btn">EXPLORE NOW</button>
+          <div class="bg">
+            <h1>How Afrikgo Works?</h1>
+            <p>Explore how we connect the driver with passenger.</p>
+            <button type="button" class="btn">EXPLORE NOW</button>
+          </div>
         </div>
-      </header>
+      </div>
+    
     <section class="category-service">
       <div class="container">
         <div class="row">
@@ -137,7 +139,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
