--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="empty" name="description">
     <meta content="empty" name="author">
 
-    <title>FAQ | Afrikgo</title>
+    <title>Home | Afrikgo</title>
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -43,9 +43,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="howitworks.html">Find a Ride</a></li>                
-                        <li><a href="howitworks.html">Offer a Ride</a></li>                
-                        <li><a href="howitworks.html">How it works</a></li>                
-                        <li><a href="faq.html" class="active">Faq</a></li>                
+                        <li><a href="howitworks.html">Offer a Ride</a></li>  
+                        <li><a href="faq.html">Faq</a></li>                
                         <li><a href="contact.html">Contact us</a></li>                
                         <li><a href="signin.html">Sign in</a></li>                
                         <li><a href="signup.html" class="signup">Sign up</a></li>                
@@ -229,12 +228,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="popular-btn">
+                <a href="">See our most popular ride</a>
+            </div>
+
         </div>
     </section>
 
     <section class="benefit">
         <div class="container">
-            <h4 class="section-title">Carpooling with Afrikgo</h4>
+            <h4 class="section-title carpooling-title">Carpooling with Afrikgo</h4>
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <div class="feature-img">
@@ -268,22 +272,26 @@
     <section class="user">
         <div class="passenger">
             <div class="user-box">
-                <div><img src="images/user.png"></div>
-                <div>
-                    <p class="user-title">I'm a passenger</p>
-                    <p class="user-text">find a ride</p>                    
-                </div>                    
-                <span><img src="images/IconArrowblue.png"></span>
+                <a href="find-a-ride.html">                    
+                    <div><img src="images/user.png"></div>
+                    <div>
+                        <p class="user-title">I'm a passenger</p>
+                        <p class="user-text">find a ride</p>                    
+                    </div>                    
+                    <span><img src="images/IconArrowblue.png"></span>
+                </a>
             </div>
         </div>
         <div class="driver">
             <div class="user-box">
-                <div><img src="images/driver.png"></div>
-                <div>
-                    <p class="user-title">I'm a driver</p>  
-                    <p class="user-text">offer a ride</p>              
-                </div>
-                <span><img src="images/IconArrowyellow.png"></span>
+                <a href="offer-a-ride.html">                    
+                    <div><img src="images/driver.png"></div>
+                    <div>
+                        <p class="user-title">I'm a driver</p>  
+                        <p class="user-text">offer a ride</p>              
+                    </div>
+                    <span><img src="images/IconArrowyellow.png"></span>
+                </a>
             </div>
         </div>
     </section>
@@ -296,7 +304,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
