--- a/ladies-only.html
+++ b/ladies-only.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -51,7 +51,7 @@
             </div><!-- /.container-fluid -->
         </nav>
     </header>
-    <div class="main-static">
+    <div class="main-static ladies-only">
       <h1>LADIES ONLY</h1>
       <div class="konten none-scroll">
         <p class="desc">
@@ -86,7 +86,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
