--- a/signin.html
+++ b/signin.html
@@ -27,8 +27,10 @@
 
 	<section class="signin-area">
 		<div class="main-logo">
-			<img src="images/logo.png">
-			<h1>AFRIK<span>GO</span></h1>
+			<a href="index.html">				
+				<img src="images/logo.png">
+				<h1>AFRIK<span>GO</span></h1>
+			</a>
 		</div>
 		<p class="signin-title">Sign up for Afrikgo</p>
 
