--- a/signup.html
+++ b/signup.html
@@ -27,15 +27,17 @@
 
 	<section class="signup-area">
 		<div class="main-logo">
-			<img src="images/logo.png">
-			<h1>AFRIK<span>GO</span></h1>
+			<a href="index.html">				
+				<img src="images/logo.png">
+				<h1>AFRIK<span>GO</span></h1>
+			</a>
 		</div>
 		<p class="signup-title">Sign up for Afrikgo</p>
 
 		<div class="form">
 			<form action="#" method="post">
 				<input type="text" name="firstname" class="field first-name" placeholder="First name">
-				<input type="text" name="lastname" class="field last-name" placeholder="First name">
+				<input type="text" name="lastname" class="field last-name" placeholder="Last name">
 				<input type="email" name="email" class="field" placeholder="Email address">
 				<input type="text" name="birth" class="field" placeholder="Date of Birth">
 				<p class="input-gender">
