--- a/ratings.html
+++ b/ratings.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -93,7 +93,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
