--- a/trust&safety.html
+++ b/trust&safety.html
@@ -25,7 +25,7 @@
 </head>
   <body>
     <header>
-        <nav class="navbar navbar-default main-navbar">
+        <nav class="navbar navbar-default main-navbar short-nav">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -87,7 +87,7 @@
           </figure>
           <div class="text-button">
             <p class="head-title">Your journey is insured</p>
-            <p class="desc">As passengers only contribute to fuel costs, no profits are made by drivers. As agreed by the Association of British Insurers this means that their insurance is not affected. On top of the driver's existing insurance, members travelling on rides booked online also benefit from additional insurance cover, free of charge, in partnership with AXA. Find out more.</p>
+            <p class="desc">As passengers only contribute to fuel costs, no profits are made by drivers. As agreed by the Association of British Insurers this means that their insurance is not affected. On top of the driver's existing insurance, members travelling on rides booked online also benefit from additional insurance cover, free of charge, in partnership with AXA. <a href="" class="text-color-primary">Find out more.</a></p>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
                         <h4>using afrikgo</h4>
                         <ul class="footer-nav">
                             <li><a href="how-it-works.html">How it works</a></li>
-                            <li><a href="trus&safety.html">Trust & Safety</a></li>
+                            <li><a href="trust&safety.html">Trust & Safety</a></li>
                             <li><a href="">Experience Levels</a></li>
                             <li><a href="ratings.html">Ratings</a></li>
                             <li><a href="ladies-only.html">Ladies only</a></li>
