--- a/dashboard/23.offered-1.html
+++ b/dashboard/23.offered-1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Dashboard</title>
+    <title>Rides</title>
 
     <!-- Bootstrap -->
     <link href="assets/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -85,106 +85,83 @@
           </div>
       </div>
     </section>
- <!--    <section class="body-content">
+    <section class="content">
       <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="panel panel-default">
-                <div class="panel-body">
-                  <ul class="nav navbar-nav navbar-left">
-                    <li><a href="#">UPCOMMING RIDES</a></li>
-                    <li class="active"><a href="#">PAST RIDES</a></li>
-                    <li><a href="#">ARCHIVED RIDES</a></li>
-                    <li><a href="#">RIDE ALERT</a></li>
-                  </ul>
-                  <div class="col-md-4 pull-right">
-                    <button type="button" class="btn btn-primary btn-lg" aria-haspopup="true" aria-expanded="false">CREATE RADE ALERT</button>
+           <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <div id="messages">
+                  <div class="col-md-2 img text-center">
+                    <img src="assets/img/bg-icon.png" alt="" class="img-circle" width="94px" height="94px">
+                  </div>
+                  <div class="col-md-10 detail">
+                    <h4>Michael Butt</h4>
+                    <p>ACCRA-KUMMASI</p>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <p class="text-muted">Pick up point</p>
+                      </div>
+                      <div class="col-md-6">
+                       <span><a href="#"><img src="assets/img/logo.png" alt="" width="15px" height="20px">  28A Wellington Rd. Pinner HA5 4NL,UK</a>
+                       </span>
+                      </div>
+                      <div class="col-md-2">
+                        <p class="nominal">$29</</p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <p class="text-muted">Pick up point</p>
+                      </div>
+                      <div class="col-md-6">
+                        <span><a href="#"><img src="assets/img/logo.png" alt="" width="15px" height="20px"> University of Salford, Salford</a>
+                        </span>
+                      </div>
+                      <div class="col-md-2">
+                        <p class="text-muted pull-right"><span class="glyphicon glyphicon-calendar"></span> July 31,2017</p>
+                      </div>
+                    </div>
+                  <hr id="border-bottom">
                   </div>
                 </div>
               </div>
-            </div>
           </div>
-        </div>
-      </section> -->
-      <section class="content">
-        <div class="container">
           <div class="row">
-            <div id="messages">
-              <ul class="list-profile">
-                <li>
-                  <div class="col-md-2">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <div id="messages">
+                  <div class="col-md-2 img text-center">
                     <img src="assets/img/bg-icon.png" alt="" class="img-circle" width="94px" height="94px">
                   </div>
-                  <div class="col-md-10">
-                   <h4>Michael Butt</h4>
+                  <div class="col-md-10 detail">
+                    <h4>Julie B.</h4>
                     <p>ACCRA-KUMMASI</p>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <p class="text-muted">Pick up point</p>
+                      </div>
+                      <div class="col-md-6">
+                       <span><a href="#"><img src="assets/img/logo.png" alt="" width="15px" height="20px">  28A Wellington Rd. Pinner HA5 4NL,UK</a>
+                       </span>
+                      </div>
+                      <div class="col-md-2">
+                        <p class="nominal">$29</</p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-4">
+                        <p class="text-muted">Pick up point</p>
+                      </div>
+                      <div class="col-md-6">
+                        <span><a href="#"><img src="assets/img/logo.png" alt="" width="15px" height="20px"> University of Salford, Salford</a>
+                        </span>
+                      </div>
+                      <div class="col-md-2">
+                        <p class="text-muted pull-right"><span class="glyphicon glyphicon-calendar"></span> July 31,2017</p>
+                      </div>
+                    </div>
+                  <hr id="border-bottom">
                   </div>
-                  <div class="col-md-offset-2 detail">
-                    <ul class="list-profile">
-                      <li>
-                        <div class="col-md-4">
-                            <p class="text-muted">Pick up point</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="#"><span><img src="assets/img/icon-email.png"></span> 28A Wellington Rd. Pinner HA5 4NL,UK</a>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="text-muted">$29</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="col-md-4">
-                            <p class="text-muted">Drop off point</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a>University of Salford, Salford</a>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="text-muted">July 31,2017</p>
-                        </div>
-                      </li>
-                    </ul>
-                    <hr id="border-bottom">                      
-                  </div>
-                </li>
-                <li>
-                  <div class="col-md-2">
-                    <img src="assets/img/bg-icon.png" alt="" class="img-circle" width="94px" height="94px">  
-                  </div>
-                  <div class="col-md-10">
-                   <h4>Julie B.</h4>
-                    <p>ACCRA-KUMMASI</p>
-                  </div>
-                  <div class="col-md-offset-2 detail">
-                    <ul class="list-profile">
-                      <li>
-                        <div class="col-md-4">
-                            <p class="text-muted">Pick up point</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a>28A Wellington Rd. Pinner HA5 4NL,UK</a>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="text-muted">$29</p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="col-md-4">
-                            <p class="text-muted">Drop off point</p>
-                        </div>
-                        <div class="col-md-4">
-                            <a>University of Salford, Salford</a>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="text-muted">July 31,2017</p>
-                        </div>
-                      </li>
-                    </ul>
-                    <hr id="border-bottom">                      
-                  </div>
-                </li>
-              </ul>
-            </div>
+                </div>
+              </div>
           </div>
         </div>
     </section>
